<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/ha_vagas_title"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/inputNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/nome"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="5dp" />

        <CheckBox
            android:id="@+id/ckEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:padding="5dp"
            android:text="@string/checkbox_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:entries="@array/tipoTelefone"
                android:minHeight="48dp"
                android:padding="5dp" />

            <EditText
                android:id="@+id/inputTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:minHeight="48dp"
                android:padding="5dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/ckCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:onClick="onCheckboxClicked"
            android:padding="5dp"
            android:text="@string/incluir_celular" />

        <EditText
            android:id="@+id/inputCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/celular"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="5dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/genero" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/radioButtonFeminino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/rb_feminino" />

            <RadioButton
                android:id="@+id/radioButtonMasculino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb_masculino" />
        </RadioGroup>

        <EditText
            android:id="@+id/inputNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/data_de_nascimento"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:onClick="showDatePickerDialog"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/formacao" />

        <CheckBox
            android:id="@+id/ckFundamental"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"
            android:padding="5dp"
            android:text="@string/ck_ensino_fundamental" />

        <EditText
            android:id="@+id/inputFundamental"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/ano_de_formatura"
            android:inputType="date"
            android:padding="5dp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/ckMedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:padding="5dp"
            android:text="@string/ck_ensino_medio" />

        <EditText
            android:id="@+id/inputMedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/ano_de_formatura"
            android:inputType="date"
            android:padding="5dp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/ckGraduacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"
            android:padding="5dp"
            android:text="@string/ck_graduacao" />

        <EditText
            android:id="@+id/inputGraduacaoConclusao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/ano_de_conclusao"
            android:inputType="date"
            android:padding="5dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/inputGraduacaoInstituicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/instituicao"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/ckEspecializacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:padding="5dp"
            android:text="@string/ck_especializacao" />

        <EditText
            android:id="@+id/inputEspecializacaoConclusao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/ano_de_conclusao"
            android:inputType="date"
            android:padding="5dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/inputEspecializacaoInstituicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/instituicao"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/ckMestrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:padding="5dp"
            android:text="@string/ck_mestrado" />

        <EditText
            android:id="@+id/inputMestradoConclusao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/ano_de_conclusao"
            android:inputType="date"
            android:padding="5dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/inputMestradoInstituicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/instituicao"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/inputMestradoTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/titulo_da_dissertacao"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/inputMestradoOrientador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/orientador"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/ckDoutorado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:padding="5dp"
            android:text="@string/ck_doutorado" />

        <EditText
            android:id="@+id/inputDoutoradoConclusao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/ano_de_conclusao"
            android:inputType="date"
            android:padding="5dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/inputDoutoradoInstituicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/instituicao"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/inputDoutoradoTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/titulo_da_monografia"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/inputDoutoradoOrientador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/orientador"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>